--- a/src/components/DataTable/cells/SelectionCell/SelectionCell.module.css
+++ b/src/components/DataTable/cells/SelectionCell/SelectionCell.module.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: flex-start;
   padding: 0;
-  padding-left: 8px;
+  padding-left: 4px;
   width: 100%;
   height: 100%;
 }
